understand how stage works

--- a/readme
+++ b/readme
@@ -2,3 +2,5 @@ Git is a distribute version control system .
 Git is free software distributed under the GPL.
 
 彭泽龙 oakpeng
+Git has a mutable index called stage.
+
